# llamaedge-rust

./: Cargo.toml  README.md  check_code_before_commit.sh
examples/: chat.rs  create_image.rs  embeddings.rs  rag_chunk_file.rs  rag_embeddings.rs  rag_retrieve_context.rs  transcribe_audio.rs  translate_audio.rs
src/: error.rs  lib.rs  params.rs
tests/: test_audio.rs  test_chat_completions.rs  test_embeddings.rs  test_files.rs  test_image.rs  test_models.rs
