[package]
name = "llamaedge"
version = "0.0.4"
authors = ["Liu Xin"]
edition = "2021"
description = "A library for interacting with LlamaEdge API"
license = "Apache-2.0"
repository = "https://github.com/LlamaEdge/llamaedge-rust"
keywords = ["llamaedge", "llm"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/llamaedge/"

[dependencies]
endpoints = { version = "0.23.0", features = ["full"] }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"] }
serde_json = "1.0.134"
thiserror = "2"
tokio = { version = "1.39.0", features = ["full"] }
url = "2.5.4"
