[package]
name = "llamaedge"
version = "0.0.7"
authors = ["Liu Xin"]
edition = "2021"
description = "A library for interacting with LlamaEdge API"
license = "Apache-2.0"
repository = "https://github.com/LlamaEdge/llamaedge-rust"
keywords = ["llamaedge", "llm"]
categories = ["api-bindings"]
readme = "README.md"
documentation = "https://docs.rs/llamaedge/"

[dependencies]
endpoints = { version = "0.24.0", git = "https://github.com/LlamaEdge/LlamaEdge.git", branch = "dev" }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
reqwest = { version = "0.12.0", features = ["json", "stream", "multipart"] }
serde_json = "1.0.134"
thiserror = "2"
tokio = { version = "1.39.0", features = ["full"] }
url = "2.5.4"

[features]
default = []
full = ["audio", "image", "rag"]
audio = ["endpoints/whisper"]
image = []
rag = ["endpoints/rag"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "chat"
path = "examples/chat.rs"
crate-type = ["bin"]

[[example]]
name = "embeddings"
path = "examples/embeddings.rs"
crate-type = ["bin"]

[[example]]
name = "transcribe_audio"
path = "examples/transcribe_audio.rs"
crate-type = ["bin"]
required-features = ["audio"]

[[example]]
name = "translate_audio"
path = "examples/translate_audio.rs"
crate-type = ["bin"]
required-features = ["audio"]

[[example]]
name = "create_image"
path = "examples/create_image.rs"
crate-type = ["bin"]
required-features = ["image"]

[[example]]
name = "rag_retrieve_context"
path = "examples/rag_retrieve_context.rs"
crate-type = ["bin"]
required-features = ["rag"]

[[example]]
name = "rag_embeddings"
path = "examples/rag_embeddings.rs"
crate-type = ["bin"]
required-features = ["rag"]

[[example]]
name = "rag_chunk_file"
path = "examples/rag_chunk_file.rs"
crate-type = ["bin"]
required-features = ["rag"]
